log
Thu 28 Sep 2023 07:59:18 PM UTC: 
 heap.c | 19 ++++++++++++++++++-
 1 file changed, 18 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:47:49: error: ‘heapEle’ undeclared (first use in this function); did you mean ‘heapElem’?
   47 |   reserva->heapArray = (heapElem*)malloc(sizeof(heapEle) * 3);
      |                                                 ^~~~~~~
      |                                                 heapElem
heap.c:47:49: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e412a1f
Thu 28 Sep 2023 07:59:26 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
6e21577
Thu 28 Sep 2023 08:01:19 PM UTC: 
 heap.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|3
total_score: 10/70
fc78896
Thu 28 Sep 2023 08:01:35 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
a029f19
Thu 28 Sep 2023 08:11:20 PM UTC: 
 heap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
 tests:  2|2
total_score: 20/70
5b68b63
Thu 28 Sep 2023 08:11:47 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
d3f4de2
Thu 28 Sep 2023 10:43:34 PM UTC: 
 heap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  2|2
total_score: 20/70
3cc3634
Thu 28 Sep 2023 10:44:25 PM UTC: 
 heap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
e185160
